# cnet

./: .gitignore  README.md
docs/: README.md
docs/classes/: bytes.md  client.md  instance.md  server.md  socket.md  tcpsocket.md  udpsocket.md
docs/classes/bytes/: asstring.md  fromint32.md  fromint64.md  fromstring.md  fromuint32.md  fromuint64.md  size.md  slice.md  toint32.md  toint64.md  tostring.md  touint32.md  touint64.md
docs/classes/client/: close.md  connect.md  getpeeraddress.md  getsockaddress.md  send.md
docs/classes/server/: close.md  closeclient.md  getclients.md  getpeeraddress.md  getsockaddress.md  isclientconnected.md  isrunning.md  run.md  send.md  sendall.md
docs/classes/socket/: accept.md  bind.md  close.md  connect.md  gethandle.md  getpeeraddress.md  getsockaddress.md  listen.md  peek.md  recv.md  recvfrom.md  send.md  sendto.md
docs/types/: address.md  byte.md  packet.md  protocol.md  sockethandle.md
examples/chat/: CMakeLists.txt  build.bat  build.sh  main.cpp
logo/: cNetLogo.psd
src/cnet/: CMakeLists.txt
src/cnet/include/: bytes.h  client.h  cnet.h  instance.h  server.h  socket.h  types.h
src/cnet/src/: bytes.cpp  client.cpp  server.cpp  socket.cpp
src/cnet/src/linux/: instance.cpp
src/cnet/src/windows/: instance.cpp
src/examples/chat/: CMakeLists.txt  README.md  main.cpp
